<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.Indyuce</groupId>
    <artifactId>MMOItems</artifactId>
    <packaging>pom</packaging>
    <version>6.10-SNAPSHOT</version>

    <modules>
        <module>MMOItems-API</module>
        <module>MMOItems-Dist</module>
    </modules>

    <name>MMOItems</name>
    <description>A great item solution for your RPG server!!</description>

    <properties>
        <downloadSources>false</downloadSources>
        <downloadJavadocs>false</downloadJavadocs>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- Build -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!--
            Clears all 'target' folders before building the plugin again.
            This prevents MythicLib from including old versions of previous
            classes when building the same version again
            -->
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>auto-clean</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Repositories -->
    <repositories>
        <repository>
            <id>phoenix</id>
            <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
        </repository>
        <repository>
            <id>nexus</id>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <!-- Deployment -->
    <distributionManagement>
        <repository>
            <id>phoenixdevt-releases</id>
            <name>PhoenixDevt Releases</name>
            <url>https://nexus.phoenixdevt.fr/repository/maven-releases/</url>
        </repository>

        <snapshotRepository>
            <id>phoenixdevt-snapshots</id>
            <name>PhoenixDevt Snapshots</name>
            <url>https://nexus.phoenixdevt.fr/repository/maven-snapshots/</url>
        </snapshotRepository>

    </distributionManagement>

    <!-- Dependencies -->
    <dependencies>
        <!-- MythicLib -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib-dist</artifactId>
            <version>1.6.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Jetbrains Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
